--- a/WingDroid/app/src/main/res/layout/item_related.xml
+++ b/WingDroid/app/src/main/res/layout/item_related.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/txtvName"
-        style="@style/TextStyle.Title"
+        style="@style/TextStyle.Title.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/imgvPreview"
