--- a/WingDroid/app/src/main/res/layout/item_new.xml
+++ b/WingDroid/app/src/main/res/layout/item_new.xml
@@ -14,14 +14,30 @@
         android:layout_height="@dimen/repository_suggestion_img_height"
         android:background="@drawable/none_st_bd_greydark_rad30" />
 
-    <TextView
-        android:id="@+id/txtvName"
-        style="@style/TextStyle.Title"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imgvPreview"
-        tools:text="TextSurface" />
+        android:orientation="horizontal">
 
-    <include layout="@layout/item_star"/>
+        <TextView
+            android:id="@+id/txtvName"
+            style="@style/TextStyle.Title.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imgvPreview"
+            tools:text="TextSurface" />
+
+        <View
+            android:id="@+id/imgvRead"
+            android:layout_width="@dimen/new_mark_width"
+            android:layout_height="@dimen/new_mark_width"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="@dimen/new_mark_margin_left"
+            android:layout_toRightOf="@id/txtvName"
+            android:background="@drawable/mark_new" />
+    </LinearLayout>
+
+    <include layout="@layout/item_star" />
 
 </LinearLayout>
