--- a/WingDroid/app/src/main/res/layout/frag_news.xml
+++ b/WingDroid/app/src/main/res/layout/frag_news.xml
@@ -62,8 +62,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="30dp"
-                    android:visibility="gone"
-                    android:gravity="center_horizontal">
+                    android:gravity="center_horizontal"
+                    android:visibility="gone">
 
                     <TextView
                         style="@style/TextStyle.IssueText"
@@ -76,7 +76,8 @@
                     android:id="@+id/recvEvents"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp" />
+                    android:layout_marginTop="10dp"
+                    android:nestedScrollingEnabled="false" />
             </RelativeLayout>
         </LinearLayout>
     </ScrollView>
