--- a/WingDroid/app/src/main/res/layout/item_release.xml
+++ b/WingDroid/app/src/main/res/layout/item_release.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/news_issue_height"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/news_padding">
 
