--- a/WingDroid/app/src/main/res/layout/dialog_event_filter.xml
+++ b/WingDroid/app/src/main/res/layout/dialog_event_filter.xml
@@ -37,6 +37,17 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/txtvAll"
+                style="@style/TextStyle.Medium"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@drawable/none_st_bd_greydark_rad30"
+                android:gravity="center"
+                android:text="@string/filter_all"
+                android:textColor="@drawable/grey_st_greydark" />
+
+            <TextView
                 android:id="@+id/txtvRelease"
                 style="@style/TextStyle.Medium"
                 android:layout_width="0dp"
