--- a/WingDroid/app/src/main/res/layout/frag_news.xml
+++ b/WingDroid/app/src/main/res/layout/frag_news.xml
@@ -24,6 +24,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recvNew"
+                android:minHeight="140dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
