--- a/WingDroid/app/src/main/res/layout/item_commit.xml
+++ b/WingDroid/app/src/main/res/layout/item_commit.xml
@@ -17,8 +17,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
         android:layout_toRightOf="@id/imgvIssue"
+        android:layout_marginLeft="4dp"
         android:orientation="vertical">
 
 
@@ -35,6 +35,7 @@
                 tools:text="Ikzhao / Hero" />
 
             <View
+                android:id="@+id/imgvRead"
                 android:layout_width="@dimen/new_mark_width"
                 android:layout_height="@dimen/new_mark_width"
                 android:layout_marginLeft="@dimen/new_mark_margin_left"
