--- a/WingDroid/app/src/main/res/layout/actv_search_result.xml
+++ b/WingDroid/app/src/main/res/layout/actv_search_result.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <SearchView
+            style="@style/SearchView"
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="43dp" />
