--- a/WingDroid/app/src/main/res/layout/frag_search.xml
+++ b/WingDroid/app/src/main/res/layout/frag_search.xml
@@ -5,32 +5,49 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/btnSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="43dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <SearchView
-            android:id="@+id/searchView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/txtvHint"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
-            android:text="@string/search_hint"
-            android:textColor="@color/decorate_bd" />
+            android:layout_height="40dp">
 
-        <ImageView
-            android:id="@+id/imgvEmoji"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@id/txtvHint"
-            android:src="@drawable/ic_emoji_monkey" />
+            <ImageView
+                android:id="@+id/imgvSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:tint="@color/decorate_bd"
+                android:src="@drawable/ic_search_black_24dp"/>
+
+            <TextView
+                android:id="@+id/txtvHint"
+                android:layout_marginLeft="5dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/search_hint"
+                android:layout_toRightOf="@id/imgvSearch"
+                android:textColor="@color/decorate_bd" />
+
+
+            <ImageView
+                android:id="@+id/imgvEmoji"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@id/txtvHint"
+                android:src="@drawable/ic_emoji_monkey" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/btnSearch"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
     </RelativeLayout>
 
     <include layout="@layout/border" />
