--- a/WingDroid/app/src/main/res/layout/item_star.xml
+++ b/WingDroid/app/src/main/res/layout/item_star.xml
@@ -4,8 +4,8 @@
     android:id="@+id/containerStar"
     android:layout_width="wrap_content"
     android:layout_height="20dp"
+    android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
-    android:layout_below="@id/flowLayout"
     android:layout_marginLeft="5dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
