--- a/WingDroid/app/src/main/res/layout/actv_splash.xml
+++ b/WingDroid/app/src/main/res/layout/actv_splash.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:background="@drawable/bg_splash">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is splash activity" />
+        android:layout_height="100dp"
+        android:layout_marginTop="130dp"
+        android:src="@drawable/ic_logo" />
 </LinearLayout>
