--- a/WingDroid/app/src/main/res/layout/frag_feed.xml
+++ b/WingDroid/app/src/main/res/layout/frag_feed.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none">
@@ -15,13 +16,25 @@
 
             <include layout="@layout/item_sort_criteria" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recvRepositories"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+            <FrameLayout
                 android:layout_below="@+id/containerSort"
-                android:layout_marginTop="10dp" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recvRepositories"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:visibility="gone"
+                    android:progressTint="@color/blue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+            </FrameLayout>
         </RelativeLayout>
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 </RelativeLayout>
