--- a/WingDroid/app/src/main/res/drawable/selector_bookmark.xml
+++ b/WingDroid/app/src/main/res/drawable/selector_bookmark.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
-        <bitmap android:src="@drawable/ic_bookmark_on" android:tint="@color/issue_open" />
+        <bitmap android:src="@drawable/ic_bookmark_on" android:tint="@color/blue" />
     </item>
     <item android:state_selected="false">
-        <bitmap android:src="@drawable/ic_bookmark" />
+        <bitmap android:src="@drawable/ic_bookmark_off" />
     </item>
 </selector>
