--- a/WingDroid/app/src/main/res/layout/item_release.xml
+++ b/WingDroid/app/src/main/res/layout/item_release.xml
@@ -54,7 +54,7 @@
 
         <TextView
             android:id="@+id/txtvTitle"
-            style="@style/TextStyle.Medium"
+            style="@style/TextStyle.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
