--- a/WingDroid/app/src/main/res/values/colors.xml
+++ b/WingDroid/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="decorate_bd">#c7c7c7</color>
     <color name="border">#c7c7c7</color>
     <color name="white">#ffffff</color>
+    <color name="trans_white">#90ffffff</color>
     <color name="blue">#076AFF</color>
 
 
