--- a/WingDroid/app/src/main/res/layout/item_star.xml
+++ b/WingDroid/app/src/main/res/layout/item_star.xml
@@ -4,6 +4,7 @@
     android:id="@+id/containerStar"
     android:layout_width="wrap_content"
     android:layout_height="20dp"
+    android:layout_below="@+id/recvTag"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:layout_marginLeft="5dp"
