--- a/WingDroid/app/src/main/res/drawable/bd_blue_rad18.xml
+++ b/WingDroid/app/src/main/res/drawable/bd_blue_rad18.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <stroke android:width="@dimen/btn_stroke" android:color="@color/grey" />
+            <corners android:radius="4dp" />
+        </shape>
+    </item>
+    <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <stroke android:width="@dimen/btn_stroke" android:color="@color/blue" />
             <corners android:radius="4dp" />
