--- a/WingDroid/app/src/main/res/layout/item_new.xml
+++ b/WingDroid/app/src/main/res/layout/item_new.xml
@@ -4,6 +4,8 @@
     android:id="@+id/container"
     android:layout_width="wrap_content"
     android:layout_height="@dimen/repository_suggestion_height"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/repository_suggestion_padding">
@@ -12,7 +14,9 @@
         android:id="@+id/imgvPreview"
         android:layout_width="@dimen/repository_suggestion_img_width"
         android:layout_height="@dimen/repository_suggestion_img_height"
-        android:background="@drawable/none_st_bd_greydark_rad30" />
+        android:adjustViewBounds="true"
+        android:background="@drawable/none_st_bd_greydark_rad30"
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="wrap_content"
