--- a/WingDroid/app/src/main/res/layout/item_release.xml
+++ b/WingDroid/app/src/main/res/layout/item_release.xml
@@ -4,6 +4,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
     android:orientation="vertical"
     android:padding="@dimen/news_padding">
 
