--- a/WingDroid/app/src/main/res/layout/item_sort_criteria.xml
+++ b/WingDroid/app/src/main/res/layout/item_sort_criteria.xml
@@ -6,6 +6,8 @@
     android:layout_alignParentRight="true"
     android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
+    android:background="?attr/selectableItemBackgroundBorderless"
+    android:clickable="true"
     android:gravity="center"
     android:orientation="horizontal">
 
