--- a/WingDroid/app/src/main/res/layout/item_suggestion.xml
+++ b/WingDroid/app/src/main/res/layout/item_suggestion.xml
@@ -13,6 +13,8 @@
         android:id="@+id/imgvPreview"
         android:layout_width="@dimen/repository_suggestion_img_width"
         android:layout_height="@dimen/repository_suggestion_img_height"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         android:background="@drawable/none_st_bd_greydark_rad30" />
 
     <TextView
